--- a/content/themes/dude/sass/layout/_site-header.scss
+++ b/content/themes/dude/sass/layout/_site-header.scss
@@ -13,12 +13,7 @@
   padding-top: 62px;
   padding-bottom: 62px;
 
-  @media (max-width: $container-ipad) {
-    padding-left: $padding-default-cols-ipad;
-    padding-right: $padding-default-cols-ipad;
-  }
-
-  @media (max-width: $container-mobile) {
+  @media (max-width: $grid-base-size + 150px) {
     padding-left: $padding-default-cols-mobile;
     padding-right: $padding-default-cols-mobile;
   }
