--- a/content/themes/dude/sass/navigation/_nav-mobile.scss
+++ b/content/themes/dude/sass/navigation/_nav-mobile.scss
@@ -75,13 +75,6 @@ $nav-open-from-top: false;
   opacity: 1;
 }
 
-.main-navigation-wrapper {
-  width: 100%;
-  position: absolute;
-  text-align: center;
-  z-index: 0;
-}
-
 // Nav fade out animation
 body:not(.js-nav-active) .nav-primary.is-animatable {
   opacity: 0;
@@ -122,102 +115,6 @@ body:not(.js-nav-active) .nav-primary.is-animatable {
     padding-right: $padding-default-cols-mobile;
   }
 
-  .content {
-    text-align: left;
-
-    .contact-details,
-    .email,
-    .phone {
-      font-weight: 300;
-    }
-
-    h2 {
-      @include responsive-font(16px, 20px);
-      color: $color-white;
-      opacity: .5;
-    }
-
-    p {
-      margin-top: 3rem;
-      margin-bottom: 2rem;
-    }
-
-    .contact-actions {
-      margin-top: 3rem;
-      margin-bottom: 2rem;
-      list-style: none;
-      padding: 0;
-    }
-
-    .contact-actions li {
-      list-style: none;
-      padding: .2rem 0;
-      margin: 0;
-    }
-
-    button.open-chat {
-      background: transparent;
-      border: 0;
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      font-weight: 300;
-      padding: 0;
-      cursor: pointer;
-      transition: all $transition-duration;
-
-      &:hover {
-        opacity: .5;
-      }
-
-      svg,
-      path {
-        top: 0;
-        fill: transparent;
-        stroke: $color-white;
-      }
-
-      &:after {
-        display: none;
-      }
-    }
-
-    a,
-    button {
-      color: $color-white;
-      display: inline-block;
-
-      &:after {
-        width: 100%;
-        height: 1px;
-        background: $color-midnight;
-        position: relative;
-        content: '';
-        display: block;
-        transition: all $transition-duration;
-        bottom: .2rem;
-        opacity: .5;
-      }
-
-      svg {
-        width: 1.8rem;
-        height: 1.8rem;
-        margin-right: .8rem;
-        position: relative;
-        top: 3px;
-      }
-
-      svg,
-      path {
-        fill: $color-white;
-      }
-
-      &:hover:after {
-        width: 0;
-      }
-    }
-  }
-
   .contact-details {
     margin-top: 5rem;
   }
@@ -225,21 +122,6 @@ body:not(.js-nav-active) .nav-primary.is-animatable {
   > * {
     width: 100%;
     color: $color-white;
-  }
-
-  .nav-items {
-    @include grid(2, $gutter_x: 8rem, $gutter_y: 10rem);
-
-    @media (max-width: 600px) {
-      display: block;
-      padding-top: 0;
-      padding-bottom: 0;
-
-      .content {
-        width: 100%;
-        margin-bottom: 3rem;
-      }
-    }
   }
 
   .menu-items {
@@ -279,7 +161,7 @@ body:not(.js-nav-active) .nav-primary.is-animatable {
       &:active,
       &.highlighted,
       &.current {
-        color: $color-nav-links;
+        color: $color-white;
         border-bottom: 1px solid $color-mint;
       }
     }
@@ -397,8 +279,8 @@ body:not(.js-nav-active) .nav-primary.is-animatable {
   -webkit-touch-callout: none;
   user-select: none;
   text-decoration: none;
-  padding: 1rem;
-  margin: -1rem -2rem 0 0;
+  padding: 0;
+  margin: 0;
   background: transparent;
   cursor: pointer;
   position: absolute;
